# TAU-theArtificialUltimate

./: .gitignore  CONTRIBUTING.md  README.md  install-linux.sh  install-windows.ps1  install.ps1  install.sh  package-lock.json  uninstall.sh
.github/workflows/: release.yml
app/Models/: Customer.php  Service.php  Transaction.php  TransactionDetail.php
database/migrations/: 2026_05_16_120030_create_transactions_table.php  2026_05_16_120043_create_transaction_details_table.php
database/seeders/: DatabaseSeeder.php
editor/: Cargo.toml  LICENSE-APACHE  NOTICE-TAU.md  README.md
editor/crates/etw_tracing/: Cargo.toml  etw_tracing.rs
editor/crates/tau_rag/: Cargo.toml
editor/crates/tau_rag/src/: chunker.rs  embedding.rs  indexer.rs  search.rs  store.rs  tau_rag.rs
editor/docs/: README.md
editor/extensions/: EXTRACTION.md  README.md
editor/script/: build-docker  bump-extension-cli  bundle-freebsd  bundle-linux  bundle-mac  bundle-windows.ps1  cargo  cargo-timing-info.js  community-pr-track-mapping.json  crate-dep-graph  debug-cli  determine-release-channel  determine-release-channel.ps1  docs-strip-preview-callouts  docs-suggest  docs-suggest-publish  draft-release-notes  drop-test-dbs  generate-action-metadata  generate-licenses  generate-licenses-csv  generate-licenses.ps1  get-pull-requests-since  get-release-notes-since  get-released-version  github-assign-contributor-issue.py  github-check-new-issue-for-duplicates.py  github-clean-issue-types.py  github-community-pr-board.py  github-find-top-duplicated-bugs.py  github-label-issues-to-triage.py  install.sh  (+28 more)
(+832 files in other folders)
