[package]
name = "etw_tracing"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "etw_tracing.rs"

[dependencies]
anyhow.workspace = true
gpui.workspace = true
log.workspace = true
net.workspace = true
serde.workspace = true
serde_json.workspace = true
util.workspace = true
workspace.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
wprcontrol = { git = "https://github.com/IkramRamadhan08/wprcontrol", rev = "0039ddd" }
windows-core.workspace = true
windows.workspace = true
