[package]
name = "tau_rag"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
path = "src/tau_rag.rs"

[dependencies]
anyhow = { workspace = true }
collections = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
http_client = { workspace = true }
log = { workspace = true }
paths = { workspace = true }
project = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlez = { workspace = true }
util = { workspace = true }
walkdir = { workspace = true }

[features]
test-support = ["gpui/test-support"]
